[gd_scene load_steps=4 format=2]

[ext_resource path="res://LevelScreen.gd" type="Script" id=1]
[ext_resource path="res://Levels/TestLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/snow-is-falling.wav" type="AudioStream" id=3]

[node name="Base" type="Node"]

script = ExtResource( 1 )

[node name="Controls" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="GoButton" type="Button" parent="Controls" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 870.0
margin_top = 516.0
margin_right = 1014.0
margin_bottom = 588.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Go"
flat = false
align = 1

[node name="CurrentLevel" parent="." index="1" instance=ExtResource( 2 )]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="Controls/GoButton" to="." method="_on_GoButton_pressed"]


